[tool.poetry]
name = "numberrstation"
version = "0.1.0"
description = "Fun little project inspired numbers station"
authors = ["Igor Rain"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
more-itertools = "^10.2.0"
gtts = "^2.5.1"

[tool.pylsp-mypy]
live_mode = false
dmypy = true

[tool.ruff]
line-length = 120
target-version = "py311"
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
